--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,10 @@ numpy = "*"
 pytest = "*"
 
 [dev-packages]
+black = "*"
 
 [requires]
 python_version = "3.10"
+
+[pipenv]
+allow_prereleases = true
