--- a/config.yaml
+++ b/config.yaml
@@ -1,43 +1,41 @@
 analysis:
   alpha: 0.99
   n_simulations: 20_000
-  historical_sample_period: 365d
+  historical_sample_period: 365
   thresholds:
     periods:
       liquidation: 7
       premium_redeem: 14
       safe_mint: 21
-
 collateral:
-  ticker: "dot"
+  dot: 
     name: "polkadot"
     risk_adjustment:
       liquidity_adjustment: 
-      depeg_adjustment:
-  ticker: "ksm"
+      depeg_adjustment: 
+  ksm: 
     name: "kusama"
     risk_adjustment:
       liquidity_adjustment: 
-      depeg_adjustment:
-  ticker: "stksm"
-    name: "lido-on-kusama"
+      depeg_adjustment: 
+  stksm:
+    name:  "lido-on-kusama"
     proxy:
-      ticker: "ksm"
-      name: "kusama"
+      ksm: "kusama"
     risk_adjustment:
       liquidity_adjustment: 0.07
       depeg_adjustment: 0.07
-  ticker: "lksm"
+  lksm: 
     name: "liquid-ksm"
     risk_adjustment: 
       liquidity_adjustment: 0.03
       depeg_adjustment: 0.07
-  ticker: "ausd"
+  ausd: 
     name: "acala-dollar-acala"
     risk_adjustment:
       liquidity_adjustment: 
       depeg_adjustment: 0.99
-  ticker: "ausd"
+  ausd:
     name: "acala-dollar"
     risk_adjustment:
       liquidity_adjustment: 
